--- a/Predict_from_Recommendation/ScholarsWalk/scholar's walk_v2.ipynb
+++ b/Predict_from_Recommendation/ScholarsWalk/scholar's walk_v2.ipynb
@@ -19,19 +19,13 @@
     "from numpy import linalg as LA\n",
     "\n",
     "# input data files\n",
-    "# file_train = \"/Users/mkhan149/Downloads/Experiments/Filtered_data/train_sample_augmented_merging_summer_fall.json\"\n",
-    "# file_valid = \"/Users/mkhan149/Downloads/Experiments/Filtered_data/valid_sample_all_merging_summer_fall.json\"\n",
-    "# file_test = \"/Users/mkhan149/Downloads/Experiments/Filtered_data/test_sample_all_merging_summer_fall.json\"\n",
-    "# file_train = \"/Users/mkhan149/Downloads/Experiments/Filtered_data/train_sample_augmented_CR.json\"\n",
-    "# file_valid = \"/Users/mkhan149/Downloads/Experiments/Filtered_data/valid_sample_all_CR.json\"\n",
-    "# file_test = \"/Users/mkhan149/Downloads/Experiments/Filtered_data/test_sample_all_CR.json\"\n",
-    "file_train = \"/Users/mkhan149/Downloads/Experiments/Filtered_data/train_sample_augmented.json\"\n",
-    "#file_train = \"/Users/mkhan149/Downloads/Experiments/train_data_en_pred_filtered.json\"\n",
-    "file_valid = \"/Users/mkhan149/Downloads/Experiments/Filtered_data/valid_sample_all.json\"\n",
-    "file_test = \"/Users/mkhan149/Downloads/Experiments/Filtered_data/test_sample_all.json\"\n",
-    "#file_valid = \"/Users/mkhan149/Downloads/Experiments/valid_sample_all_without_summer.json\"\n",
-    "#file_test = \"/Users/mkhan149/Downloads/Experiments/test_sample_all_without_summer.json\"\n",
-    "#file_train_unique = '/Users/mkhan149/Downloads/Experiments/train_data_all.json'"
+    "file_train = \"./Filtered_data/train_sample_augmented.json\"\n",
+    "#file_train = \"./train_data_en_pred_filtered.json\"\n",
+    "file_valid = \"./Filtered_data/valid_sample_all.json\"\n",
+    "file_test = \"./Filtered_data/test_sample_all.json\"\n",
+    "#file_valid = \"./valid_sample_all_without_summer.json\"\n",
+    "#file_test = \"./test_sample_all_without_summer.json\"\n",
+    "#file_train_unique = './train_data_all.json'"
    ]
   },
   {
@@ -385,7 +379,7 @@
     "    #count1= 0\n",
     "    count2 = 0\n",
     "    #output_path1= output_dir+ \"/test_course_allocation_CIS_new.txt\"\n",
-    "    output_path1= \"/Users/mkhan149/Downloads/Experiments/scholars_walk_test_course_allocation.txt\"\n",
+    "    output_path1= \"./scholars_walk_test_course_allocation.txt\"\n",
     "    f = open(output_path1, \"w\") #generating text file with recommendation using filtering function\n",
     "    course_allocation = []\n",
     "    error_list = []\n",
@@ -471,7 +465,7 @@
     "   \n",
     "    f.close()\n",
     "    course_allocation_actual_predicted = pd.DataFrame(course_allocation, columns=['Semester', 'Course_ID', 'actual_n', 'predicted_n', 'predicted_n_true', 'predicted_n_false', 'avg_n_actual', 'st_dev_actual', 'number_of_terms', 'n_sts_last_offering'])\n",
-    "    course_allocation_actual_predicted.to_csv('/Users/mkhan149/Downloads/Experiments/scholars_walk_course_allocation_actual_predicted_v7.csv')\n",
+    "    course_allocation_actual_predicted.to_csv('./scholars_walk_course_allocation_actual_predicted_v7.csv')\n",
     "    return avg_mse_for_course_allocation_considering_not_predicted_courses, avg_mae_for_course_allocation_considering_not_predicted_courses, avg_msse_for_course_allocation_considering_not_predicted_courses, avg_mase_for_course_allocation_considering_not_predicted_courses, error_list, ab_error_list, st_error_list\n"
    ]
   },
@@ -892,8 +886,8 @@
     "        # print(\"number of instances: \", len(v))\n",
     "        print(\"percentage of retaken courses out of missed courses for test data: \", per_of_retaken_courses)\n",
     "test_rec_info = pd.DataFrame(rec_info, columns=['bsize', 'target_courses', 'rec_courses', 'n_rel_rec', 'recall_score', 'target_semester'])\n",
-    "test_rec_info.to_json('/Users/mkhan149/Downloads/Experiments/SW_test_rec_info_2.json', orient='records', lines=True)\n",
-    "test_rec_info.to_csv('/Users/mkhan149/Downloads/Experiments/SW_test_rec_info_2.csv')\n",
+    "test_rec_info.to_json('./SW_test_rec_info_2.json', orient='records', lines=True)\n",
+    "test_rec_info.to_csv('./SW_test_rec_info_2.csv')\n",
     "# number of non_CIS courses out of missed courses for different number of prior semesters\n",
     "# missed_bsize = dict(sorted(missed_bsize.items(), key=lambda item: item[0], reverse= False))\n",
     "# for k, v in missed_bsize.items():\n",
@@ -955,12 +949,12 @@
     "    term_dict_predicted_false[keys] = count_course_dict\n",
     "\n",
     " #calculate average for total number of times a course is taken at each semester using training data \n",
-    "# all_data_en_pred = pd.read_json('/Users/mkhan149/Downloads/Experiments/all_data_en_pred_filtered.json', orient='records', lines= True)\n",
-    "all_data_en_pred = pd.read_json('/Users/mkhan149/Downloads/Experiments/all_data_en_pred_filtered.json', orient='records', lines= True)\n",
+    "# all_data_en_pred = pd.read_json('./all_data_en_pred_filtered.json', orient='records', lines= True)\n",
+    "all_data_en_pred = pd.read_json('./all_data_en_pred_filtered.json', orient='records', lines= True)\n",
     "\n",
     "term_dict_all, frequency_of_courses, count_course_avg, course_sd_main, course_number_terms = calculate_avg_n_actual_courses(all_data_en_pred, reversed_item_dict)\n",
     "\n",
-    "# valid_data_unique = pd.read_json('/Users/mkhan149/Downloads/Experiments/Filtered_data/valid_sample_filtered_unique.json', orient='records', lines= True)\n",
+    "# valid_data_unique = pd.read_json('./Filtered_data/valid_sample_filtered_unique.json', orient='records', lines= True)\n",
     "# term_dict_valid, frequency_of_courses2, count_course_avg2, course_sd_main2, course_number_terms2 = calculate_avg_n_actual_courses(valid_data_unique, reversed_item_dict)\n",
     "\n",
     "# avg_mse_for_course_allocation, avg_mse_for_course_allocation_considering_not_predicted_courses = calculate_mse_for_course_allocation(term_dict, term_dict_predicted)\n",
